# BCIP

./: .bazelrc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  PLAN.md  README.md  SECURITY.md  announcement_tip.toml  cliff.toml  flake.nix  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preview-desktop.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_server_manager.rs  bcip_binary.rs  config.rs  lib.rs  main.rs  pty_manager.rs
apps/desktop/src-tauri/src/commands/: fs.rs  (+7 more)
codex-rs/codex-im-bridge/: Cargo.toml
codex-rs/codex-im-bridge/src/: lib.rs  session.rs
codex-rs/codex-im-common/: Cargo.toml
codex-rs/codex-im-common/src/: crypto.rs  dedup.rs  format.rs  lib.rs  pairing.rs  permission.rs  queue.rs  webhook.rs
codex-rs/codex-im-feishu/: Cargo.toml
codex-rs/codex-im-feishu/src/: api.rs  cards.rs  lib.rs
codex-rs/codex-im-protocol/: Cargo.toml
codex-rs/codex-im-protocol/src/: event_bus.rs  lib.rs  messages.rs  platform.rs
codex-rs/codex-patent-agents/: Cargo.toml
codex-rs/codex-patent-agents/assets/: analyzer.toml  creativity_checker.toml  infringement_checker.toml  invalidity_checker.toml  novelty_checker.toml  quality_checker.toml  retriever.toml  reviewer.toml  writer.toml
codex-rs/codex-patent-agents/assets/bcip/: analyzer.toml  creativity_checker.toml  infringement_checker.toml  invalidity_checker.toml  novelty_checker.toml  quality_checker.toml  retriever.toml  reviewer.toml  writer.toml
codex-rs/codex-patent-agents/assets/scenario-rules/: infringement_analysis.toml  inventiveness_rejection.toml  novelty_analysis.toml  oa_strategy.toml  patent_drafting.toml  quality_review.toml
codex-rs/codex-patent-agents/assets/skills/: cap-response.toml
codex-rs/codex-patent-agents/src/: agent_manifest.rs  agent_runtime.rs  bcip_roles.rs  feedback_loop.rs  knowledge_context.rs  learning.rs  lib.rs  model_router.rs  provider_router.rs  reflection.rs  roles.rs  scenario.rs
codex-rs/codex-patent-agents/tests/: role_loading_test.rs
codex-rs/codex-patent-constitutional/: Cargo.toml
codex-rs/codex-patent-constitutional/src/: checkers.rs  engine.rs  lib.rs  loader.rs  model.rs  types.rs
codex-rs/codex-patent-constitutional/tests/: integration_test.rs
codex-rs/codex-patent-core/: Cargo.toml
codex-rs/codex-patent-core/src/: error.rs  http.rs  lib.rs  types.rs
codex-rs/codex-patent-core/tests/: circuit_breaker_tests.rs  types_serde_tests.rs
codex-rs/codex-patent-domain/: Cargo.toml
codex-rs/codex-patent-domain/src/: analysis.rs  claim_generator.rs  claim_parser.rs  compare.rs  disclosure.rs  drafting.rs  examiner_simulator.rs  guideline_graph.rs  infringement.rs  interaction.rs  invalid_decision.rs  invalidity.rs  invention_classifier.rs  kg_seed.rs  legal_reasoning.rs  lib.rs  oa.rs  oa_feedback.rs  oa_pattern.rs  oa_templates.rs  output_evaluator.rs  quality.rs  quality_rules.rs  retrieval.rs  rule_engine.rs  spec_writer.rs
codex-rs/codex-patent-domain/tests/: claim_parser_tests.rs  compare_tests.rs  e2e_quality.rs
codex-rs/codex-patent-knowledge/: Cargo.toml
codex-rs/codex-patent-knowledge/src/: cards.rs  citation_tracker.rs  cnipa.rs  embedding_client.rs  graph.rs  keyword_search.rs  law_db.rs  lib.rs  link_graph.rs  paths.rs  refresh_pipeline.rs  search.rs  search_eval.rs  semantic_memory.rs  synonym.rs  vector_index.rs
codex-rs/codex-patent-knowledge/tests/: integration_test.rs
codex-rs/codex-patent-scheduler/: Cargo.toml
codex-rs/codex-patent-scheduler/src/: cron.rs  lib.rs  scheduler.rs  scheduler_concurrency_tests.rs  templates.rs
codex-rs/codex-patent-skills/: Cargo.toml
codex-rs/codex-patent-skills/assets/: cap-analysis.toml  cap-clarity-exam.toml  cap-disclosure-exam.toml  cap-formal-exam.toml  cap-invalid.toml  cap-inventive.toml  cap-prior-art-ident.toml  cap-response.toml  cap-retrieval.toml  cap-writing.toml  foundation-hitl.toml  stop-slop.toml
codex-rs/codex-patent-skills/src/: lib.rs
codex-rs/codex-patent-skills/tests/: skill_loading_test.rs
codex-rs/codex-patent-text/: Cargo.toml
codex-rs/codex-patent-text/src/: classification.rs  lib.rs  similarity.rs  tokenizer.rs
codex-rs/codex-patent-text/tests/: classification_tests.rs  similarity_metrics_tests.rs  tokenizer_edge_cases_tests.rs
codex-rs/codex-patent-tools/: Cargo.toml
codex-rs/codex-patent-tools/src/: advanced_analysis.rs  analysis_tools.rs  common.rs  council_tools.rs  document_tools.rs  drafting_tools.rs  evaluation_tools.rs  google_patents.rs  legal_tools.rs  lib.rs  management_tools.rs  oa_tools.rs  patent_document.rs  patent_search.rs  quality_tools.rs  review_tools.rs  search_tools.rs  simulator_tools.rs  web_search_tools.rs
codex-rs/codex-patent-tools/tests/: document_tools_tests.rs  e2e_scenarios.rs  integration_tests.rs  workflow_tests.rs
codex-rs/codex-patent-workflow/: Cargo.toml
codex-rs/codex-patent-workflow/src/: agent_bridge.rs  assignment.rs  assignment_tests.rs  checkpoint.rs  collaboration.rs  collaboration_assignment_tests.rs  config.rs  flow.rs  graph.rs  graph_executor.rs  graph_executor_concurrency_tests.rs  lib.rs  llm_plan_generator.rs  orchestrator.rs  plan.rs  task.rs  types.rs
codex-rs/patent-kg-sync/: Cargo.toml
codex-rs/patent-kg-sync/src/: db.rs  decision_parser.rs  ipc_parser.rs  judgment_parser.rs  main.rs  models.rs  utils.rs
codex-rs/pdfium/: Cargo.toml
codex-rs/pdfium-sys/: Cargo.toml  bindings.rs  build.rs  wrapper.h
codex-rs/pdfium-sys/src/: dynamic.rs  lib.rs
codex-rs/pdfium/src/: bitmap.rs  document.rs  error.rs  font.rs  lib.rs  library.rs  page.rs  text_page.rs  types.rs
codex-rs/realtime-webrtc/: Cargo.toml
codex-rs/realtime-webrtc/src/: lib.rs
codex-rs/web-search/: Cargo.toml
codex-rs/web-search/src/: anysearch.rs  anysearch_test.rs  error.rs  exa.rs  lib.rs  provider.rs  tavily.rs  types.rs
(+4305 files in other folders)
