[package]
name = "codex-im-common"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
codex-im-protocol = { path = "../codex-im-protocol" }
chrono = { workspace = true }
hmac = "0.12"
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
