[package]
name = "codex-im-feishu"
version = "0.1.0"
edition = "2024"

[dependencies]
codex-im-bridge = { path = "../codex-im-bridge" }
codex-im-common = { path = "../codex-im-common" }
codex-im-protocol = { path = "../codex-im-protocol" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
