[package]
name = "codex-im-protocol"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
