[package]
name = "codex-patent-agents"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
codex-patent-knowledge = { path = "../codex-patent-knowledge" }
codex-patent-core = { path = "../codex-patent-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }