[package]
name = "codex-patent-constitutional"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
