[package]
name = "codex-patent-core"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
pretty_assertions = { workspace = true }