[package]
name = "codex-patent-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
codex-patent-agents = { path = "../codex-patent-agents" }
codex-patent-core = { path = "../codex-patent-core" }
codex-patent-domain = { path = "../codex-patent-domain" }
codex-patent-knowledge = { path = "../codex-patent-knowledge" }
codex-patent-text = { path = "../codex-patent-text" }
codex-web-search = { path = "../web-search" }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "process", "io-util", "fs"] }
regex = "1"

[features]
default = []
search-tools = []
analysis-tools = []
review-tools = []
drafting-tools = []
management-tools = []
evaluation-tools = []