[package]
name = "codex-patent-tools"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
codex-patent-agents = { path = "../codex-patent-agents" }
codex-patent-core = { path = "../codex-patent-core" }
codex-patent-domain = { path = "../codex-patent-domain" }
codex-patent-knowledge = { path = "../codex-patent-knowledge" }
codex-patent-text = { path = "../codex-patent-text" }
codex-web-search = { path = "../web-search" }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"], default-features = false }
tokio = { workspace = true, features = ["rt", "macros", "process", "io-util", "fs"] }
regex = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }

# LiteParse: PDF 解析引擎（通过 feature gate 启用）
liteparse = { path = "../liteparse", default-features = false, optional = true }

[features]
default = ["document-pdf"]
document-pdf = ["liteparse"]
document-pdf-direct = ["document-pdf", "liteparse/direct-convert"]

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }