[package]
name = "codex-patent-workflow"
version.workspace = true
license = "Apache-2.0"
edition = "2021"
publish = false
description = "DAG 编排引擎 — 将线性 FlowStep 扩展为有向无环图，支持并行分支执行与条件路由"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }