[package]
name = "patent-kg-sync"
version = "0.2.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { workspace = true, features = ["bundled"] }
regex = "1.10"
walkdir = "2"
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
