[package]
name = "codex-realtime-webrtc"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# 关闭后 macOS 上仍编译本 crate，但不拉取 libwebrtc/webrtc-sys（BCIP 文本 TUI 足够）
native-webrtc = ["dep:libwebrtc"]

[lib]
name = "codex_realtime_webrtc"
path = "src/lib.rs"
test = false
doctest = false

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
libwebrtc = { version = "0.3.26", git = "https://github.com/juberti-oai/rust-sdks.git", rev = "e2d1d1d230c6fc9df171ccb181423f957bb3c1f0", optional = true }

[lints]
workspace = true
