[package]
name = "bcip-agent"
version = "0.1.0"
description = "BCIP Agent - 智能专利助手桌面应用"
authors = ["BCIP Team"]
license = "Apache-2.0"
repository = "https://github.com/xujian519/BCIP"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
portable-pty = "0.9"
libc = "0.2"
futures-util = "0.3.32"
toml = "0.8"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
strip = true
